<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
         />
    <item
        android:id="@+id/event"
        android:icon="@drawable/ic_add_event"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/contacts"
        android:orderInCategory="100"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/sms"

        android:orderInCategory="100"
        android:title="@string/sms"
        app:showAsAction="never" />
    <item
        android:id="@+id/crefresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="always" />

</menu>
