<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.delevere.gvmc.ProfileActivity">
    <item
        android:id="@+id/crefresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="always" />


    <item
            android:id="@+id/contacts"
            android:orderInCategory="100"
            android:title="@string/contacts"
            app:showAsAction="never" />
        <item
            android:id="@+id/profile"
            android:orderInCategory="100"
            android:title="@string/profile"
            app:showAsAction="never" />
    <item
        android:id="@+id/refer_friend"
        android:orderInCategory="100"
        android:title="@string/refer_frined"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
