<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/event"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always" />
       <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/contacts"
        android:orderInCategory="100"
        android:title="@string/contacts"
        app:showAsAction="never" />
    <item
        android:id="@+id/sms"

        android:orderInCategory="100"
        android:title="@string/sms"
        app:showAsAction="never" />



</menu>